# task_tracker

./: LICENSE  docker-compose.yaml
auth/: Makefile  alembic.ini  pyproject.toml
auth/migrations/: env.py
auth/migrations/versions/: 6619741e015e_.py  801d111c0d0f_.py
auth/src/: alembic.ini  config.py  ioc.py  main.py
auth/src/api/routers/: __init__.py  auth_router.py
auth/src/api/schemas/: __init__.py  auth_schemas.py
auth/src/db/: database.py  repository.py
auth/src/db/models/: __init__.py  base.py  users.py
auth/src/migrations/: env.py
auth/src/migrations/versions/: d0839ed5b709_.py  fa411a32237c_.py
auth/src/services/: security.py
auth/src/services/auth/: auth_service.py  dto.py  exceptions.py  password.py  token_service.py  user_service.py
auth/tests/: conftest.py  factories.py  test_repository.py
auth/tests/integration/: conftest.py
auth/tests/repositories/: test_user_repository.py
auth/tests/services/: test_user_service.py
auth/tests/unit/: conftest.py
auth/tests/unit/repositories/: test_user_repository.py
auth/tests/unit/services/: test_user_service.py
